# OpenXLSX

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.markdown  LICENSE.md  Makefile.GNU  Package.swift  README.markdown  README.md  TODO.md  customdoxygen.css  make-gnu.sh  test.xlsx  vcpkg.json
@benchmark/: Benchmark.cpp  CMakeLists.txt  benchmark.cpp  table_printer.h
@demo/: CMakeLists.txt  main.cpp
@examples/@benchmark/: Benchmark.cpp  CMakeLists.txt
@examples/@c++demo/: CMakeLists.txt  Demo.cpp
@examples/@cdemo/: CMakeLists.txt  Demo.c
@examples/@demo/: CMakeLists.txt  Demo.cpp
@examples/@pimpldemo/: CMakeLists.txt  Demo.cpp
@examples/c++/: CMakeLists.txt  Demo1.cpp  Demo2.cpp
@library/: CMakeLists.txt
@library/@dependencies/: CMakeLists.txt  LICENCE  libzip++.cpp  libzip++.h
@library/@flat/: flat_set.hpp
@library/@libzip++/: CMakeLists.txt  libzip++.h
@library/@openxlsx/: CMakeLists.txt  config.h.cmake
@library/@pugixml/: CMakeLists.txt  pugiconfig.hpp
@library/@xml/: CMakeLists.txt
@library/@zip/: CMakeLists.txt
@library/@zippy/: CMakeLists.txt  LICENSE  README.md
@library/XLCell/: XLCell.h  XLCellReference.h
@library/XLSheet/: XLColumn.cpp  XLColumn.h  XLRow.cpp  XLRow.h  XLTemplate.h  XLWorksheet.cpp
@library/XLWorkbook/: XLAbstractXMLFile.h  XLException.h  XLSharedStrings.cpp  XLStyles.cpp  XLTokenizer.h  XLWorkbook.cpp
@library/headers/: XLAppProperties.h  XLCell.h  XLCellFormats.h  XLCellRange.h  XLCellValue.h  XLColumn.h  XLContentTypes.h  XLCoreProperties.h  XLDocument.h  XLFont.h  XLRow.h  XLSharedStrings.h  XLSheet.h  XLSpreadsheetElement.h  XLWorksheet.h  XLXml.h
@library/sources/: XLAbstractXMLFile.cpp  XLAppProperties.cpp  XLCell.cpp  XLCellFormula.cpp  XLCellIterator.cpp  XLCellRange.cpp  XLCellReference.cpp  XLCellValue.cpp  XLChartsheet.cpp  XLColor.cpp  XLColumn.cpp  XLContentTypes.cpp  XLCoreProperties.cpp  XLDocument.cpp  XLFont.cpp  XLRelationships.cpp  XLRow.cpp  XLSharedStrings.cpp  XLSheet.cpp  XLSpreadsheetElement.cpp  XLStyles.cpp  XLTokenizer.cpp  XLWorkbook.cpp  XLWorksheet.cpp
@source/: CMakeLists.txt
@source/@flat/: flat_multimap.hpp  flat_multiset.hpp
@source/@xml/: CMakeLists.txt  xml.h
@source/@zip/: CMakeLists.txt  README.md  libzip++.cpp
@source/XLCell/: XLCell.cpp  XLCell.h  XLCellFormats.h  XLCellFormula.h  XLCellIterator.h  XLCellRange.cpp  XLCellRange.h  XLCellReference.cpp  XLCellReference.h  XLCellValue.cpp  XLCellValue.h  XLValue.cpp  XLValue.h  XLValueBoolean.cpp  XLValueBoolean.h  XLValueEmpty.cpp  XLValueEmpty.h  XLValueError.h  XLValueNumber.cpp  XLValueNumber.h  XLValueString.cpp  XLValueString.h
@source/XLSheet/: XLRow.cpp  XLRow.h  XLSheet.h  XLWorksheet.cpp  XLWorksheet.h
@test/: CMakeLists.txt  Test.cpp  Test01_DocumentCreation.cpp  Test02_DocumentProperties.cpp  Test07_CellReference.cpp
Benchmarks/: 2024-07-29-benchmarks_before_XMLNode_wrappers  2024-07-29-benchmarks_with_XMLNode_wrappers_and_namespace_and_stripping  2024-07-29-benchmarks_with_XMLNode_wrappers_and_namespace_char_support  2024-07-29-benchmarks_with_XMLNode_wrappers_and_namespace_support  2024-07-29-benchmarks_with_XMLNode_wrappers_and_namespaced_name_disabled  2024-08-11-benchmarks_post-XLCellIterator-Rework  2024-08-14-benchmarks_post-default-row-column-style-support  2024-09-02-benchmarks  2024-12-19-benchmarks  2024-12-29-benchmarks  2024-12-30-benchmarks-post-XLSharedStrings-by-ref  2025-01-09-benchmarks-post-conditionalFormatsAndSheetProtection  2025-01-10-benchmarks-post-XLCellValue-bugfix  2025-01-31-benchmarks-post-XLComments-implementation  2025-02-02-benchmarks-post-XLRowIterator-Rework  2025-07-20-benchmarks-after-hiding-pugixml-internals  2025-08-29-benchmarks-after-code-review-with-libzip  Benchmark.cpp  CMakeLists.txt  benchmarks_post-XLCellIterator-Rework
Examples/: CMakeLists.txt  CustomZip.h  CustomZip.hpp  Demo0.cpp  Demo01.cpp  Demo02.cpp  Demo03.cpp  Demo04.cpp  Demo08.cpp  Demo09.cpp  Demo1.cpp  Demo1.hpp  Demo10.cpp  Demo11.cpp  Demo1A.cpp  Demo2.cpp  Demo2.hpp  Demo3.cpp  Demo3.hpp  Demo4.cpp  Demo4.hpp  Demo5.cpp  Demo5.hpp  Demo6.cpp  Demo6.hpp  Demo7.cpp  Demo7.hpp  Demo8.cpp  Demo8.hpp  Demo9.cpp  Demo9.hpp  DemoAll.cpp  createTemplate.cpp
OpenXLSX/: CMakeLists.txt  OpenXLSX-Exports.hpp  OpenXLSX.hpp  OpenXLSXConfig.cmake  module.modulemap
Tests/: CMakeLists.txt  NumberType.xlsx  main.cpp  testCellNameNumber.cpp  testXLCell.cpp  testXLCellRange.cpp  testXLCellReference.cpp  testXLCellValue.cpp  testXLCellValueProxy.cpp  testXLColor.cpp  testXLDateTime.cpp  testXLDocument.cpp  testXLFormula.cpp  testXLImage.cpp  testXLRow.cpp  testXLSheet.cpp  ziptest-with-libs.cpp  ziptest.cpp
benchmark/: Benchmark.cpp  CMakeLists.txt  bench.cpp  benchmark.cpp  table_printer.h
demo/: CMakeLists.txt  main.cpp
doxy/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  customdoxygen.css
examples/: CMakeLists.txt  Demo1.cpp  Demo2.cpp  Demo3.cpp  Demo4.cpp  Demo5.cpp  Demo6.cpp  Demo7.cpp  Demo8.cpp
src/: CMakeLists.txt  OpenXLSX.h  XLAbstractSheet.cpp  XLAbstractSheet.h  XLAbstractXMLFile.cpp  XLAbstractXMLFile.h  XLAppProperties.cpp  XLAppProperties.h  XLArchive.cpp  XLArchive.h  XLCell.cpp  XLCell.h  XLCellFormats.h  XLCellFormula.h  XLCellIterator.cpp  XLCellIterator.h  XLCellRange.cpp  XLCellRange.h  XLCellReference.cpp  XLCellReference.h  XLCellType.h  XLCellValue.cpp  XLCellValue.h  XLCellValueTemplate.h  XLChartsheet.cpp  XLChartsheet.h  XLColor.cpp  XLColor.h  XLColumn.cpp  XLColumn.h  XLContentTypes.cpp  XLContentTypes.h  XLCoreProperties.cpp  XLCoreProperties.h  XLDocument.cpp  XLDocument.h  XLDocumentAppProperties.cpp  XLDocumentAppProperties.h  XLDocumentCoreProperties.cpp  XLDocumentCoreProperties.h  (+35 more)
src/XLCell/: XLCell.h  (+22 more)
tests/: CMakeLists.txt  Test00_Main.cpp  Test01_DocumentCreation.cpp  Test02_DocumentProperties.cpp  Test03_Workbook.cpp  Test04-06_Sheet.cpp  Test07_CellReference.cpp  Test08_Cell.cpp  main.cpp  mainTest.cpp  testXLCell.cpp  testXLCellValue.cpp  testXLCellValueProxy.cpp  testXLDateTime.cpp  testXLDocument.cpp  testXLFormula.cpp
(+537 files in other folders)
